--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./CSS/reset.css"></link>
     <link rel="stylesheet" href="./CSS/main.css"></link>
 </head>
 <body>
-    
+    <div id="board"></div>
 
     <script src = "./JS/main.js"></script>
 </body>
